k8s/yaml2/00-spark-setup.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: zeppelin
