k8s/yaml2/04-zeppelin-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zeppelin-server
  namespace: zeppelin
  labels:
    app.kubernetes.io/name: zeppelin-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: zeppelin-server
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: zeppelin-server
    spec:
      serviceAccountName: zeppelin-server
      volumes:
      - name: nginx-conf
        configMap:
          name: zeppelin-server-conf
          items:
          - key: nginx.conf
            path: nginx.conf
      - name: nginx-htpasswd
        secret:
          secretName: htpasswd
      - name: nginx-cert
        secret:
          secretName: mkcert
      - name: zeppelin-server-notebook-volume
        hostPath:
          path: /Volumes/data/git/labtools-k8s/data/zeppelin/notebooks
          type: Directory
      - name: zeppelin-server-conf-volume
        hostPath:
          path: /Volumes/data/git/labtools-k8s/data/zeppelin/conf
          type: Directory
      - name: zeppelin-server-k8s-interpreter
        hostPath:
          path: /Volumes/data/git/labtools-k8s/k8s/yaml2/interpreter
          type: Directory
      - name: data-lab-volume
        persistentVolumeClaim:
          claimName: lab-claim
      containers:
      - name: zeppelin-server
        image: registry.minikube/zeppelin-custom-0.10.1-3.2:master
        #imagePullPolicy: Always
        command: ["sh", "-c", "$(ZEPPELIN_HOME)/bin/zeppelin.sh"]
        lifecycle:
          preStop:
            exec:
              # SIGTERM triggers a quick exit; gracefully terminate instead
              command: ["sh", "-c", "ps -ef | grep org.apache.zeppelin.server.ZeppelinServer | grep -v grep | awk '{print $2}' | xargs kill"]
        ports:
        - name: http
          containerPort: 8080
        - name: https
          containerPort: 8443
        - name: rpc
          containerPort: 12320
        volumeMounts:
          - name: zeppelin-server-notebook-volume    # configure this to persist notebook
            mountPath: /opt/zeppelin/notebook
          - name: zeppelin-server-conf-volume        # configure this to persist Zeppelin configuration
            mountPath: /opt/zeppelin/conf
          - name: zeppelin-server-k8s-interpreter    # configure this to mount customized Kubernetes spec for interpreter
            mountPath: /opt/zeppelin/k8s/interpreter
          - name: data-lab-volume
            mountPath: /lab
      - name: zeppelin-server-gateway
        image: nginx:1.24
        command: ["/bin/sh", "-c"]
        args:
          - cp -f /tmp/conf/nginx.conf /etc/nginx/nginx.conf;
            cp -f /tmp/htpasswd/dot.htpasswd /etc/nginx/.htpasswd;
            mkdir /etc/nginx/certs;
            cp /tmp/certs/tls.crt /etc/nginx/certs;
            cp /tmp/certs/tls.key /etc/nginx/certs;
            sed -i -e "s/SERVICE_DOMAIN/$SERVICE_DOMAIN/g" /etc/nginx/nginx.conf;
            sed -i -e "s/NAMESPACE/$(cat /var/run/secrets/kubernetes.io/serviceaccount/namespace)/g" /etc/nginx/nginx.conf;
            cat /etc/nginx/nginx.conf;
            /usr/sbin/nginx
        volumeMounts:
          - name: nginx-conf
            mountPath: /tmp/conf
          - name: nginx-htpasswd
            mountPath: /tmp/htpasswd
          - name: nginx-cert
            mountPath: /tmp/certs
        lifecycle:
          preStop:
            exec:
              # SIGTERM triggers a quick exit; gracefully terminate instead
              command: ["/usr/sbin/nginx", "-s", "quit"]
      - name: dnsmasq  # nginx requires dns resolver for dynamic dns resolution
        image: "janeczku/go-dnsmasq:release-1.0.7"
        args:
          - --listen
          - "127.0.0.1:53"
          - --default-resolver
          - --append-search-domains
          - --hostsfile=/etc/hosts
          - --verbose
---
kind: Service
apiVersion: v1
metadata:
  name: zeppelin-server
  namespace: zeppelin
spec:
  ports:
    - name: http
      port: 80
    - name: https
      port: 443
    - name: rpc            # port name is referenced in the code. So it shouldn't be changed.
      port: 12320
  selector:
    app.kubernetes.io/name: zeppelin-server
