k8s/yaml2/08-jupyter-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jupyter-server
  namespace: zeppelin
  labels:
    app.kubernetes.io/name: jupyter-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: jupyter-server
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: jupyter-server
    spec:
      serviceAccountName: zeppelin-server
      volumes:
        - name: data-lab-volume
          persistentVolumeClaim:
            claimName: lab-claim
      containers:
        - name: zeppelin-server
          image: registry.minikube/spark-jupyter-3.2:master
          ports:
            - name: http
              containerPort: 8888
          volumeMounts:
            - name: data-lab-volume
              mountPath: /lab
---
kind: Service
apiVersion: v1
metadata:
  name: jupyter-server
  namespace: zeppelin
spec:
  ports:
    - name: jupyter
      port: 8888
  selector:
    app.kubernetes.io/name: jupyter-server
