k8s/yaml2/12-hive-metastore.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hive-metastore
  namespace: hive
  labels:
    app.kubernetes.io/name: hive-metastore
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: hive-metastore
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: hive-metastore
    spec:
      containers:
        - name: hive-metastore
          image: registry.minikube/hive-metastore-base-3.2:master
          #imagePullPolicy: Always
          volumeMounts:
            - name: ca-pemstore
              mountPath: /usr/local/share/ca-certificates/
              readOnly: true
          ports:
            - name: metastore
              containerPort: 9083
      volumes:
        - name: ca-pemstore
          configMap:
            name: ca-pemstore
---
kind: Service
apiVersion: v1
metadata:
  name: hive-metastore
  namespace: hive
spec:
  ports:
    - name: hive-metastore
      port: 9083
  selector:
    app.kubernetes.io/name: hive-metastore
